fixed padding and spacing

--- a/frontend/src/components/OrderHistory/OrderHistory.css
+++ b/frontend/src/components/OrderHistory/OrderHistory.css
@@ -1,2 +1,6 @@
+.centerHeader {
+    text-align: center;
+}
+
 #order-history-container {
 }
